[project]
name = "probabilistic-forecasting-travel-time-lightgbm"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.0",
    "dask>=2025.9.1",
    "dask-labextension>=7.0.0",
    "dask-ml>=2025.1.0",
    "distributed>=2025.9.1",
    "graphviz>=0.21",
    "jax>=0.7.2",
    "jaxlib>=0.7.2",
    "jupyterlab>=4.4.9",
    "lightgbm[dask]>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "xarray>=2025.9.0",
]
